# aoc-2023-haskell

./: .gitmodules  CHANGELOG.md  LICENSE  Readme.org  aoc23.cabal  cabal.project  fetch_inputs.sh  generate_days.sh
app/: Main.hs
examples/: ex10.txt  test.txt
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
