cabal-version:      3.4
name:               aoc23
version:            0.1.0.0
synopsis:           Advent of Code 2023 solutions
license:            MIT
license-file:       LICENSE
author:             Abizer Nasir
category:           Math
build-type:         Simple
extra-doc-files:    Readme.org
common warnings
    ghc-options: -Wall

library
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:
        Day01

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: OverloadedStrings

    -- Other library packages from which modules are imported.
    build-depends:
        aoc-utils,
        base ^>=4.19.0.0,
        split

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

executable aoc23
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.19.0.0,
        aoc23

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
