cabal-version:      3.4
name:               aoc23
version:            0.1.0.0
synopsis:           Advent of Code 2023 solutions
license:            MIT
license-file:       LICENSE
author:             Abizer Nasir
category:           Math
build-type:         Simple
extra-doc-files:    Readme.org
common build
    ghc-options: -Wall -O2

library
    import:           build
    exposed-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        Day11
        Day12
        Day13
        Day14
        Day15
        Day16
        Day17
        Day18
        Day19
        Day20
        Day21
        Day22
        Day23
        Day24
        Day25
    other-extensions: OverloadedStrings,
                      DuplicateRecordFields
    build-depends:
                  aoc-utils,
                  base ^>=4.19.0.0,
                  containers >= 0.6.8,
                  
                  range >= 0.3.0,
                  split >= 0.2.4
                  
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc23
    import:           build
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.0.0,
        aoc23
    hs-source-dirs:   app
    default-language: Haskell2010
